Adding link to download debian package.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <ul>
           <li><a href="https://github.com/rsfreitas/gtkollection/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/rsfreitas/gtkollection/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/downloads/rsfreitas/gtkollection/gtkollection_0.1_i386.deb">Download <strong>Debian</strong></a></li>
           <li><a href="https://github.com/rsfreitas/gtkollection">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
