Adding debian/ubuntu installation steps.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,31 @@ plugin that can search the web using google image API.</p>
 <li>make</li>
 <li>sudo make install</li>
 </ul>
-      </section>
+
+<h2>Ubuntu installation</h2>
+
+<p>gtkollection has a launchpad.net repository for ubuntu distributions. Currently
+it is supported on the following versions:</p>
+
+<ul>
+    <li>Oneiric Ocelot (oneiric)</li>
+    <li>Precise Pangolin (precise)</li>
+    <li>Quantal Quetzal (quantal)</li>
+</ul>
+
+<p>You can install gtkollection from its launchpad.net repository using the following
+steps.</p>
+
+<p>First add its PPA to your system by copying the line below to your's software
+sources:</p>
+
+<p><font size="2">deb http://ppa.launchpad.net/rsfreitas/gtkollection/ubuntu (YOUR UBUNTU VERSION HERE) main</font></p>
+
+<p>Second add the PPA key signing key to your apt keyring:</p>
+
+<p><font size="2">sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 0FEF6417</font></p>
+
+</section>
     </div>
     <footer>
       <p>Project maintained by <a href="https://github.com/rsfreitas">rsfreitas</a></p>
